--- a/libft/Makefile
+++ b/libft/Makefile
@@ -5,12 +5,12 @@ SRCS =	ft_atoi.c ft_itoa.c \
 		ft_strdup.c ft_strjoin.c ft_strtrim.c ft_split.c ft_strmapi.c ft_striteri.c \
 		ft_bzero.c ft_memchr.c ft_memcmp.c ft_memcpy.c ft_memmove.c ft_memset.c ft_calloc.c \
 		ft_putchar_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_putstr_fd.c ft_substr.c \
-		ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c
+		ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c \
+		ft_printf/ft_printf.c ft_printf/ft_putchar.c ft_printf/ft_putnbr_base.c ft_printf/ft_putptr.c \
+		ft_printf/ft_putstr.c ft_printf/ft_unsigned_putnbr_base.c
 
 
 OBJS  = $(SRCS:.c=.o)
-
-OBJS_B = $(SRCS_B:.c=.o)
 
 NAME = libft.a
 
@@ -18,9 +18,6 @@ all: $(NAME)
 
 $(NAME): $(OBJS)
 			ar crs $(NAME) $(OBJS)
-
-bonus: $(OBJS_B)
-			ar crs $(NAME) $(OBJS_B)
 
 .c.o:
 	gcc -Werror -Wextra -Wall -c $< -o $(<:.c=.o)
